--- a/build.config
+++ b/build.config
@@ -21,7 +21,7 @@ CONFIG_FIRMWARE_CPU_600MHZ=y
 CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 
 ### Enable IPv6 support
-CONFIG_FIRMWARE_ENABLE_IPV6=y
+#CONFIG_FIRMWARE_ENABLE_IPV6=n
 
 ### Include XFRM (IPsec) modules & iptables extension ~ 0.2MB
 #CONFIG_FIRMWARE_INCLUDE_XFRM=y
@@ -88,13 +88,13 @@ CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 #CONFIG_FIRMWARE_INCLUDE_TESTPARM=y
 
 ### Include alternative L2TP control client RP-L2TP. ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_RPL2TP=y
+#CONFIG_FIRMWARE_INCLUDE_RPL2TP=y
 
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
 CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
 
 ### Include HTTPS support for DDNS client. openssl ~1.2MB
-CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=y
+#CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=y
 
 ### Include HTTPS support. openssl ~1.2MB
 CONFIG_FIRMWARE_INCLUDE_HTTPS=y
@@ -112,13 +112,13 @@ CONFIG_FIRMWARE_INCLUDE_SFTP=y
 CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
+#CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
 ### Include StrongSwan. XFRM modules ~0.2MB, strongswan ~0.7MB
 #CONFIG_FIRMWARE_INCLUDE_SSWAN=y
 
 ### Include Wireguard VPN module and utilite
-CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y
+#CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y
 
 ### Include AmneziaWG kernel module
 #CONFIG_FIRMWARE_INCLUDE_AMNEZIAWG=y
@@ -130,7 +130,7 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
+#CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include TOR proxy ~2.8MB
 #CONFIG_FIRMWARE_INCLUDE_TOR=y
@@ -145,13 +145,13 @@ CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 #CONFIG_FIRMWARE_INCLUDE_PRIVOXY=y
 
 ### Include DNSCrypt proxy ~0.5MB
-CONFIG_FIRMWARE_INCLUDE_DNSCRYPT=y
+#CONFIG_FIRMWARE_INCLUDE_DNSCRYPT=y
 
 ### Include Stubby DNS-over-TLS (DoT) ~0.5MB
-CONFIG_FIRMWARE_INCLUDE_STUBBY=y
+#CONFIG_FIRMWARE_INCLUDE_STUBBY=y
 
 ### Include doh_proxy DNS-over-HTTPS (DoH) ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_DOH=y
+#CONFIG_FIRMWARE_INCLUDE_DOH=y
 
 ### Include Curl support ~0.15MB
 #CONFIG_FIRMWARE_INCLUDE_CURL=y
@@ -201,3 +201,4 @@ CONFIG_NETFILTER_NETLINK_QUEUE=m
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
 CONFIG_IP_NF_QUEUE=m
 CONFIG_IP6_NF_QUEUE=m
+
